# github-notification-daemon

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
src/: auth.rs  conf.rs  err.rs  main.rs  notifications.rs
src/auth/: fs.rs
