[package]
name = "github-notification-daemon"
version = "0.1.0"
authors = ["Roman Rudakov <rrudakov@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", features = ["derive"]}
serde_json = "1.0.87"
reqwest = { version = "0.11.12", features = ["json", "blocking"] }
tokio = { version = "1.21.2", features = ["full"] }
dirs = "4.0.0"
notify-rust = { version = "4.5.10", features = ["images"] }
chrono = "0.4.22"
webbrowser = "0.8.1"
