[package]
name = "github-notification-daemon"
version = "0.1.0"
authors = ["Roman Rudakov <rrudakov@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
tokio = { version = "1.25.0", features = ["full"] }
dirs = "4.0.0"
notify-rust = { version = "4.7.0", features = ["images"] }
chrono = "0.4.23"
webbrowser = "0.8.7"
